; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/platforms/powermac/extr_feature.c_heathrow_ide_reset.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/platforms/powermac/extr_feature.c_heathrow_ide_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device_node = type { i32 }

@macio_unknown = common dso_local global i32 0, align 4
@HEATHROW_FCR = common dso_local global i32 0, align 4
@HRW_IDE0_RESET_N = common dso_local global i32 0, align 4
@HRW_IDE1_RESET_N = common dso_local global i32 0, align 4
@ENODEV = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.device_node*, i64, i64)* @heathrow_ide_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @heathrow_ide_reset(%struct.device_node* %0, i64 %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca %struct.device_node*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store %struct.device_node* %0, %struct.device_node** %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  %8 = load i64, i64* %6, align 8
  switch i64 %8, label %29 [
    i64 0, label %9
    i64 1, label %19
  ]

9:                                                ; preds = %3
  %10 = load %struct.device_node*, %struct.device_node** %5, align 8
  %11 = load i32, i32* @macio_unknown, align 4
  %12 = load i32, i32* @HEATHROW_FCR, align 4
  %13 = load i32, i32* @HRW_IDE0_RESET_N, align 4
  %14 = load i64, i64* %7, align 8
  %15 = icmp ne i64 %14, 0
  %16 = xor i1 %15, true
  %17 = zext i1 %16 to i32
  %18 = call i64 @simple_feature_tweak(%struct.device_node* %10, i32 %11, i32 %12, i32 %13, i32 %17)
  store i64 %18, i64* %4, align 8
  br label %32

19:                                               ; preds = %3
  %20 = load %struct.device_node*, %struct.device_node** %5, align 8
  %21 = load i32, i32* @macio_unknown, align 4
  %22 = load i32, i32* @HEATHROW_FCR, align 4
  %23 = load i32, i32* @HRW_IDE1_RESET_N, align 4
  %24 = load i64, i64* %7, align 8
  %25 = icmp ne i64 %24, 0
  %26 = xor i1 %25, true
  %27 = zext i1 %26 to i32
  %28 = call i64 @simple_feature_tweak(%struct.device_node* %20, i32 %21, i32 %22, i32 %23, i32 %27)
  store i64 %28, i64* %4, align 8
  br label %32

29:                                               ; preds = %3
  %30 = load i64, i64* @ENODEV, align 8
  %31 = sub nsw i64 0, %30
  store i64 %31, i64* %4, align 8
  br label %32

32:                                               ; preds = %29, %19, %9
  %33 = load i64, i64* %4, align 8
  ret i64 %33
}

declare dso_local i64 @simple_feature_tweak(%struct.device_node*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
